VSE: Functions missing Cache Invalidation or Preview updates #90415

Closed
opened 2021-08-03 23:16:58 +02:00 by tintwotin · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59

Blender Version
Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-08-03 02:22, hash: 04c75c5ce7

I quickly went through most of the functions which could have these problems, so I might have overlooked some or even added false positives to the lists.

Prefetch Frames should be paused while changing values in all sidebar values including modifiers. Changing sidebar values while Prefetch Frames is on is almost impossible because of delays(this problem was already addressed for numerous functions including Undo and Scrub).

Functions missing Cache invalidation(when Prefetch Frames is on - it doesn't reset, and it should):

  • Movie/Strobe.
  • Movie/Reverse Frames.
  • Swapping Effect inputs in ex. Transitions.
  • Reload Strips.
  • Reload Strips and adjust lengths.
  • Clear Strip Offsets.
  • Swap Strips.

Scene Strips:

  • 3D View object changes in referenced Scene strip needs to invalidate cache.
  • Changing the Post Processing setting in the referenced scene in a scene strip needs to invalidate cache.
  • Changes in Compositor.

Text strip doesn't update while entering text, but do when changing Wrap Width.

Snap Strips to Current Frame, is not caching from the Playhead position.

Modifiers:

  • Curves doesn't update Preview while dragging curve points. Changing Tone doesn't invalidate cache.

As I guess, that the audio isn't stored in the cache, the cache shouldn't be invalidated when changing sound strip values.

A brutal solution: If the sidebar gets focus then stop Prefetch Frames and if anything outside the sequencer, file browser and preferences gets focus then invalidate cache....

An unrelated note: Shouldn't Mirror X/Y be for the Source and not the transformed position? I guess users do not want to work will all of the transform values mirrored if their source material is mirrored.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.59 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master (modified), commit date: 2021-08-03 02:22, hash: `04c75c5ce7` I quickly went through most of the functions which could have these problems, so I might have overlooked some or even added false positives to the lists. Prefetch Frames should be paused while changing values in all sidebar values including modifiers. Changing sidebar values while Prefetch Frames is on is almost impossible because of delays(this problem was already addressed for numerous functions including Undo and Scrub). Functions missing Cache invalidation(when Prefetch Frames is on - it doesn't reset, and it should): - Movie/Strobe. - Movie/Reverse Frames. - Swapping Effect inputs in ex. Transitions. - Reload Strips. - Reload Strips and adjust lengths. - Clear Strip Offsets. - Swap Strips. Scene Strips: - 3D View object changes in referenced Scene strip needs to invalidate cache. - Changing the Post Processing setting in the referenced scene in a scene strip needs to invalidate cache. - Changes in Compositor. Text strip doesn't update while entering text, but do when changing Wrap Width. Snap Strips to Current Frame, is not caching from the Playhead position. Modifiers: - Curves doesn't update Preview while dragging curve points. Changing Tone doesn't invalidate cache. As I guess, that the audio isn't stored in the cache, the cache shouldn't be invalidated when changing sound strip values. A brutal solution: If the sidebar gets focus then stop Prefetch Frames and if anything outside the sequencer, file browser and preferences gets focus then invalidate cache.... An unrelated note: Shouldn't Mirror X/Y be for the Source and not the transformed position? I guess users do not want to work will all of the transform values mirrored if their source material is mirrored.
Author

Added subscriber: @tintwotin

Added subscriber: @tintwotin

Added subscriber: @iss

Added subscriber: @iss

Thanks for nice list.

I don't quite understand Reload Strips - where can it fail?

Text strip doesn't update while entering text

This is correct behavior

As I guess, that the audio isn't stored in the cache, the cache shouldn't be invalidated when changing sound strip values.
That is correct, but I can't cause sound strip to invalidate cache. What would be steps?

An unrelated note: Shouldn't Mirror X/Y be for the Source and not the transformed position? I guess users do not want to work will all of the transform values mirrored if their source material is mirrored.

Probably it should apply for source.

Thanks for nice list. I don't quite understand Reload Strips - where can it fail? > Text strip doesn't update while entering text This is correct behavior As I guess, that the audio isn't stored in the cache, the cache shouldn't be invalidated when changing sound strip values. That is correct, but I can't cause sound strip to invalidate cache. What would be steps? > An unrelated note: Shouldn't Mirror X/Y be for the Source and not the transformed position? I guess users do not want to work will all of the transform values mirrored if their source material is mirrored. Probably it should apply for source.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

It's Strip/Input/Reload Strips - it doesn't invalidate cache, and it should, since I guess that function can be used to swap between folders of the similar named material but with ex. diffent render states/bitrates etc.

On audio, I just wanted to get confirmed that audio changes shouldn't invalidate cache. So all is good.

It's Strip/Input/Reload Strips - it doesn't invalidate cache, and it should, since I guess that function can be used to swap between folders of the similar named material but with ex. diffent render states/bitrates etc. On audio, I just wanted to get confirmed that audio changes shouldn't invalidate cache. So all is good.
Author

One more: Changing the Post Processing setting in the referenced scene in a scene strip.

One more: Changing the Post Processing setting in the referenced scene in a scene strip.
Author

Removed subscriber: @tintwotin

Removed subscriber: @tintwotin
Author

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'
Author

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.

As I do not have anymore time or motivation for a continued investment in the Blender project, I'm giving up on this report for now.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well.
Feel free to unsubscribe though.

Sorry to hear (thx again reporting). In my opinion we should not sweep this under the carpet (esp. since this already been confirmed), there is still a chance to get this fixed in the future and others might be affected by this issue as well. Feel free to unsubscribe though.

This issue was referenced by 7e148c45c8

This issue was referenced by 7e148c45c89a7016f937aed90c399154546d8e9f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-11-15 20:33:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90415
No description provided.